--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,9 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Post"
+permalink: /post/
 author_profile: true
 ---
-
-
-了了了了了了
