--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,14 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+ - 风可以吹起一张白纸却无法吹走一只蝴蝶， 因为生命的力量在于不顺从。
+   
+  
+ - 理想是赶路人的月，是逆流者的桨， 是荆棘尽处的繁花，是万仞山上的日出让人在现实的泥沼中甘愿苦苦跋涉。
+
+   
+ - 不是所有鲜花都盛开在春天，不是所有河流都流向大海， 鲜花盛开在四季，河流流向八荒，只要热爱，山海皆可平，无处不风景。
+
+   
+ - 人生漫长，晴雨交加，但若是心怀热爱，即使岁月荒芜， 亦能奔山赴海，静待一树花开。
